--- a/my-websocket-server/package.json
+++ b/my-websocket-server/package.json
@@ -4,11 +4,16 @@
   "description": "High-performance WebSocket server for financial trading",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server-simple/index.js",
+    "dev": "nodemon server-simple/index.js",
+    "test": "echo \"No tests yet\" && exit 0"
   },
-  "keywords": ["websocket", "fintech", "trading", "realtime"],
+  "keywords": [
+    "websocket",
+    "fintech",
+    "trading",
+    "realtime"
+  ],
   "author": "Your Name",
   "license": "MIT",
   "type": "commonjs",
@@ -19,6 +24,6 @@
     "ws": "^8.19.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.0"
+    "nodemon": "^2.0.22"
   }
 }
